--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="shortcut icon" href="./img/icon.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="js/titleScroll.js"></script>
-    <title>ここは開発支援ツールのトップページだよ！！</title>
+    <title>TailwindCSS DevTools</title>
 </head>
 
 <body>
-    <header
+    <div
         class="sticky top-0 flex justify-between w-full h-16 text-slate-900 bg-slate-100 border-b border-slate-200 z-50">
         <div class="flex text-xl place-items-center">
             <img src="./img/icon.svg" class="h-8 mx-8 md:mx-4">
@@ -30,7 +30,7 @@
                 class="px-3 py-1 sm:m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 transition duration-300  rounded-full border-solid">Image
                 <span class="hidden lg:inline">Tools</span></a>
         </div>
-    </header>
+    </div>
 
     <div class="container px-8 mx-auto my-12 grid grid-cols-1 xl:grid-cols-2 gap-8 w-full" id="contentsBlocks">
         <a href="./html/usage/index.html"
