--- a/html/imgTools/index.html
+++ b/html/imgTools/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../../img/icon.svg">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>TailwindCSS DevTools</title>
+    <title>Image Tools / TailwindCSS DevTools</title>
     <style>
 
     </style>
