--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         </div>
         <div class="flex place-items-center text-lg mx-8">
             <a href="./html/usage/index.html"
-                class="px-3 py-1 sm:m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 transition duration-300  rounded-full border-solid">Usage</a>
+                class="px-3 py-1 mx-1 sm:m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 transition duration-300  rounded-full border-solid">Usage</a>
             <a href="./html/divTools/index.html"
-                class="px-3 py-1 sm:m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 transition duration-300  rounded-full border-solid">Div
+                class="px-3 py-1 mx-1 sm:m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 transition duration-300  rounded-full border-solid">Div
                 <span class="hidden lg:inline">Tools</span></a>
             <a href="./html/textTools/index.html"
-                class="px-3 py-1 sm:m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 transition duration-300  rounded-full border-solid">Text
+                class="px-3 py-1 mx-1 sm:m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 transition duration-300  rounded-full border-solid">Text
                 <span class="hidden lg:inline">Tools</span></a>
             <a href="./html/imgTools/index.html"
-                class="px-3 py-1 sm:m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 transition duration-300  rounded-full border-solid">Image
+                class="px-3 py-1 mx-1 sm:m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 transition duration-300  rounded-full border-solid">Image
                 <span class="hidden lg:inline">Tools</span></a>
         </div>
     </div>
