--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div
         class="sticky top-0 flex justify-between w-full h-16 text-slate-900 bg-slate-100 border-b border-slate-200 z-50">
         <div class="flex text-xl place-items-center">
-            <img src="./img/icon.svg" class="h-8 mx-8 md:mx-4">
+            <img src="./img/icon.svg" class="h-8 mx-4">
             <span class="hidden md:inline mx-2">TailwindCSS Development Support Tools</span>
         </div>
         <div class="flex place-items-center text-lg mx-8">
