--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 </head>
 
 <body>
+    <div class="absolute inset-0 bg-white z-50" id="nowLoading">
+        <img src="./img/icon.svg" alt="TailwindCSS Logo"
+            class="w-1/5 animate-spin mx-auto mt-72 mb-8 md:mb-16 xl:mb-32">
+        <span class="block text-center text-2xl animate-pulse">Now Loading...</span>
+    </div>
     <div
-        class="sticky top-0 flex justify-between w-full h-16 text-slate-900 bg-slate-100 border-b border-slate-200 z-50">
+        class="sticky top-0 flex justify-between w-full h-16 text-slate-900 bg-slate-100 border-b border-slate-200 z-40">
         <div class="flex text-xl place-items-center">
             <img src="./img/icon.svg" class="h-8 mx-4">
             <span class="hidden md:inline mx-2">TailwindCSS Development Support Tools</span>
@@ -37,7 +42,7 @@
             class="border-2 border-slate-200 rounded-xl h-full w-full relative xl:hover:scale-125 xl:hover:z-50 xl:hover:shadow-2xl duration-500 hoverable">
             <img src="./img/usagePreview.png" class="rounded-xl">
             <p
-                class="absolute font-mono font-bold text-3xl bg-slate-200/90 text-slate-800 rounded-b-xl px-8 py-4 z-100 bottom-0 w-full">
+                class="absolute font-mono font-bold text-3xl bg-slate-200/90 text-slate-800 rounded-b-xl px-8 py-4 z-40 bottom-0 w-full">
                 Usage
             </p>
         </a>
@@ -45,7 +50,7 @@
             class="border-2 border-slate-200 rounded-xl h-full w-full relative xl:hover:scale-125 xl:hover:z-50 xl:hover:shadow-2xl duration-500 hoverable">
             <img src="./img/divToolsPreview.png" class=" rounded-xl">
             <p
-                class="absolute font-mono font-bold text-3xl bg-slate-200/90 text-slate-800 rounded-b-xl px-8 py-4 z-100 bottom-0 w-full">
+                class="absolute font-mono font-bold text-3xl bg-slate-200/90 text-slate-800 rounded-b-xl px-8 py-4 z-40 bottom-0 w-full">
                 Div Tools
             </p>
         </a>
@@ -53,7 +58,7 @@
             class="border-2 border-slate-200 rounded-xl h-full w-full relative xl:hover:scale-125 xl:hover:z-50 xl:hover:shadow-2xl duration-500 hoverable">
             <img src="./img/textToolsPreview.png" class="rounded-xl">
             <p
-                class="absolute font-mono font-bold text-3xl bg-slate-200/90 text-slate-800 rounded-b-xl px-8 py-4 z-100 bottom-0 w-full">
+                class="absolute font-mono font-bold text-3xl bg-slate-200/90 text-slate-800 rounded-b-xl px-8 py-4 z-40 bottom-0 w-full">
                 Text Tools
             </p>
         </a>
@@ -61,11 +66,12 @@
             class="border-2 border-slate-200 rounded-xl h-full w-full relative xl:hover:scale-125 xl:hover:z-50 xl:hover:shadow-2xl duration-500 hoverable">
             <img src="./img/ImgToolsPreview.png" class="rounded-xl">
             <p
-                class="absolute font-mono font-bold text-3xl bg-slate-200/90 text-slate-800 rounded-b-xl px-8 py-4 z-100 bottom-0 w-full">
+                class="absolute font-mono font-bold text-3xl bg-slate-200/90 text-slate-800 rounded-b-xl px-8 py-4 z-40 bottom-0 w-full">
                 Image Tools
             </p>
         </a>
     </div>
+    <script src="./js/loading.js"></script>
     <script src="./js/blockHover.js"></script>
 </body>
 
