--- a/html/textTools/index.html
+++ b/html/textTools/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../../img/icon.svg">
+    <link rel="stylesheet" href="../../css/fadeout.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Text Tools / TailwindCSS DevTools</title>
     <style>
@@ -13,6 +14,11 @@
 </head>
 
 <body>
+    <div class="absolute inset-0 bg-white z-50" id="nowLoading">
+        <img src="../../img/icon.svg" alt="TailwindCSS Logo"
+            class="w-1/5 animate-spin mx-auto mt-72 mb-8 md:mb-16 xl:mb-32">
+        <span class="block text-center text-2xl animate-pulse">Now Loading...</span>
+    </div>
     <div
         class="sticky top-0 flex justify-between w-full h-16 text-slate-900 bg-slate-100 border-b border-slate-200 z-50">
         <a href="../../index.html" class="flex text-xl place-items-center">
@@ -271,6 +277,7 @@
             </div>
         </div>
     </div>
+    <script src="../../js/loading.js"></script>
     <script src="../../js/preview.js"></script>
     <script src="../../js/copyClipboard.js"></script>
     <script src="../../js/textTools.js"></script>
